@@ -560,7 +560,8 @@ The flag NOUNINVOKE can be substituted for a spell \
 to make all the effects non-dispellable until the property no longer applies; \
 use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a spell \
 name to force all the listed effects be cast at a different level than default.\
-The flag MAXTICKS=[NUMBER] can be used to shorted the length of spell casts. \n\r\
+The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
+The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
@@ -659,7 +660,8 @@ effect of the listed spells. The flag NOUNINVOKE can be substituted for a spell 
 to make all the effects non-dispellable until the property no longer applies; \
 use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a spell \
 name to force all the listed effects be cast at a different level than default.\
-The flag MAXTICKS=[NUMBER] can be used to shorted the length of spell casts. \n\r\
+The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
+The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
@@ -746,7 +748,8 @@ be under the effect of the listed spells. The flag NOUNINVOKE can be substituted
 to make all the effects non-dispellable until the property no longer applies; \
 use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a spell \
 name to force all the listed effects be cast at a different level than default.\
-The flag MAXTICKS=[NUMBER] can be used to shorted the length of spell casts. \n\r\
+The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
+The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
@@ -1663,7 +1666,8 @@ will be under the effect of the listed spells. The flag NOUNINVOKE can be substi
 to make all the effects non-dispellable until the property no longer applies; \
 use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a spell \
 name to force all the listed effects be cast at a different level than default.\
-The flag MAXTICKS=[NUMBER] can be used to shorted the length of spell casts. \n\r\
+The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
+The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
@@ -2248,7 +2252,8 @@ The flag NOUNINVOKE can be substituted for a spell \
 to make all the effects non-dispellable until the property no longer applies; \
 use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a spell \
 name to force all the listed effects be cast at a different level than default.\
-The flag MAXTICKS=[NUMBER] can be used to shorted the length of spell casts. \n\r\
+The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
+The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
@@ -2271,7 +2276,8 @@ The flag NOUNINVOKE can be substituted for a spell \
 to make all the effects non-dispellable until the property no longer applies; \
 use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a spell \
 name to force all the listed effects be cast at a different level than default.\
-The flag MAXTICKS=[NUMBER] can be used to shorted the length of spell casts. \n\r\
+The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
+The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
@@ -2465,7 +2471,8 @@ The flag NOUNINVOKE can be substituted for a spell \
 to make all the effects non-dispellable until the property no longer applies; \
 use this flag with care! The flag LEVEL=[NUMBER] can also be substituted for a spell \
 name to force all the listed effects be cast at a different level than default.\
-The flag MAXTICKS=[NUMBER] can be used to shorted the length of spell casts. \n\r\
+The flag MAXTICKS=[NUMBER] can be used to shorted the length of all spell casts. \n\r\
+The flag TICKS=[NUMBER] can be used to shorted the length of all subsequent listed spells. \n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
